auto-test/tests/chapter_18/invalid_types/scalar_required/assign_scalar_to_struct.c
struct s {
  int a;
};

struct s x = {1};

int main(void) {
  struct s *ptr = &x;
  *ptr = 2; 
  return 0;
}